--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">The FilmList</string>
+
+    <string name="user_score">User Score</string>
+    <string name="overview_title">Overview</string>
+    <string name="cast">Cast</string>
+    <string name="status">Status</string>
+    <string name="original_language">Original Language</string>
+    <string name="budget">Budget</string>
+    <string name="revenue">Revenue</string>
+    <string name="companies">Companies</string>
 </resources>
